--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,7 @@
 @article{omar2024deep,
   abbr={TBDATA},
   bibtex_show={true},
-  title={Crowdsourcing and Sidewalk Data: A Preliminary Study on the Trustworthiness of OpenStreetMap Data in the US},
+  title={Deep Umbra: A Generative Approach for Sunlight Access Computation in Urban Spaces},
   doi={https://doi.org/10.1109/TBDATA.2024.3382964},
   author={Omar, Kazi Shahrukh and Moreira, Gustavo and Hodczak, Daniel and Hosseini, Maryam and Colaninno, Nicola and Lage, Marcos and Miranda, Fabio},
   journal={IEEE Transactions on Big Data},
